--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,11 @@
 app_name = "Selaginella"
-port = 8080
 
 [database]
-host = ""
+host = "host"
 port = 5432
-username = ""
-password = ""
+username = "username"
+password = "password"
 name = "selaginella"
+
+[rpc]
+port = 8080
