--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -17,22 +17,12 @@ rpcs:
       - "0x000"
       - "0x000"
 
-  - rpc_url: 'https://btc.getblock.io/7350dbd9-4f17-4917-9555-bfadbc6b8a21/mainnet/'
-    chain_id: 2
-    start_block: 0
-    contracts:
-      - "0x000"
-      - "0x000"
-    event_contracts:
-      - "0x000"
-      - "0x000"
-
 database:
   db_host: "127.0.0.1"
   db_port: 5432
   db_user: "graphnode"
   db_password: ""
-  db_name: "acorus"
+  db_name: "selaginella"
 
 
 
