--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -36,10 +36,10 @@ rpcs:
     usdt_address: ''
 
 database:
-  db_host: "127.0.0.1"
+  db_host: "120.77.251.247"
   db_port: 5432
-  db_user: "graphnode"
-  db_password: ""
+  db_user: "postgres"
+  db_password: "galamini"
   db_name: "selaginella"
 
 
