--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -32,10 +32,10 @@ rpcs:
     usdt_address: ''
 
 database:
-  db_host: "120.77.251.247"
+  db_host: "postgresql"
   db_port: 5432
   db_user: "postgres"
-  db_password: "galamini"
+  db_password: "vVb9NhLYui"
   db_name: "selaginella"
 
 
