--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -9,27 +9,39 @@ metrics:
 rpcs:
   - rpc_url: 'https://eth-sepolia.g.alchemy.com/v2/o0zYyGdlny_0bvOGS8qtNdMG4REyM0I_'
     chain_id: 11155111
-    founding_pool_address: '0x6e76B86C54F52eB49f5f9CdE8A2424Cb48813F38'
+    founding_pool_address: '0x1DE4c1C613aA0Ba3F52eEa56D2D0632e252B9E5F'
     weth_address: '0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14'
     usdt_address: ''
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
-    founding_pool_address: '0x18A9aDBDc0E3024580D1CF3Ff6E74A974f065D0E'
+    founding_pool_address: '0x9738C3259C3C172095c22de015D66416C76Ee40F'
     weth_address: '0x5300000000000000000000000000000000000004'
     usdt_address: ''
 
   - rpc_url: 'https://polygonzkevm-testnet.g.alchemy.com/v2/dmeCZ-Yf1YjIrgExOXbfrTF_Z_51GyBx'
     chain_id: 1442
-    founding_pool_address: '0xB5D85D87D0Db77663aDAe0a709Ac0D0fd0E72DAe'
+    founding_pool_address: '0x54FC63B55b18697820601206a6C0AE0e671d63Fd'
     weth_address: '0x2ad78787CCaf7FA8FAe8953FD78ab9163f81DcC8'
     usdt_address: ''
 
   - rpc_url: 'https://opt-sepolia.g.alchemy.com/v2/FzuTJBqbf8-w1E6AAcPkWO1a2OGFX2DL'
     chain_id: 11155420
-    founding_pool_address: '0x5a4AEb044cE88fBEe8c058f18263DaCf1d8F16fF'
+    founding_pool_address: '0xb0221487B9FEF4F391b310338Fd0740f2797fBB1'
     weth_address: '0x4200000000000000000000000000000000000006'
     usdt_address: ''
+
+#  - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
+#    chain_id: 84532
+#    founding_pool_address: '0xb0221487B9FEF4F391b310338Fd0740f2797fBB1'
+#    weth_address: '0x4200000000000000000000000000000000000006'
+#    usdt_address: ''
+#
+#  - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
+#    chain_id: 421614
+#    founding_pool_address: '0xb0221487B9FEF4F391b310338Fd0740f2797fBB1'
+#    weth_address: '0x4200000000000000000000000000000000000006'
+#    usdt_address: ''
 
 database:
   db_host: "postgresql"
