--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -44,10 +44,10 @@ rpcs:
 #    usdt_address: ''
 
 database:
-  db_host: "127.0.0.1"
+  db_host: "postgresql"
   db_port: 5432
   db_user: "postgres"
-  db_password: ""
+  db_password: "vVb9NhLYui"
   db_name: "selaginella"
 
 
