--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -31,17 +31,17 @@ rpcs:
     weth_address: '0x4200000000000000000000000000000000000006'
     usdt_address: ''
 
-#  - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
-#    chain_id: 84532
-#    founding_pool_address: '0xb0221487B9FEF4F391b310338Fd0740f2797fBB1'
-#    weth_address: '0x4200000000000000000000000000000000000006'
-#    usdt_address: ''
-#
-#  - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
-#    chain_id: 421614
-#    founding_pool_address: '0xb0221487B9FEF4F391b310338Fd0740f2797fBB1'
-#    weth_address: '0x4200000000000000000000000000000000000006'
-#    usdt_address: ''
+  - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
+    chain_id: 84532
+    founding_pool_address: '0x0DF967269C10f959CaFcE3B10acA4Af97a5DaDfF'
+    weth_address: '0x4200000000000000000000000000000000000006'
+    usdt_address: ''
+
+  - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
+    chain_id: 421614
+    founding_pool_address: '0x89bc318D74eE9B3b28252Ae94444414676d480F4'
+    weth_address: '0x4200000000000000000000000000000000000006'
+    usdt_address: ''
 
 database:
   db_host: "postgresql"
