--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,13 @@
-name: Acorus Image Build Only
+name: Selaginella Image Build Only
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      environment:
+        type: choice
+        description: environment to choice
+        options: 
+        - testnet
+        - mainnet
 env:
   AWS_REGION : "ap-southeast-1"
   app: selaginella
@@ -39,8 +44,8 @@ jobs:
           #REF: ${{ github.event.inputs.ref }}
           COMMIT_SHA: ${{ steps.get-commit-sha.outputs.commit_sha }}
         run: |
+          aws s3 cp s3://eniac-x-labs-config-center/${{ env.app }}/${{ github.event.inputs.environment }}/selaginella.yaml selaginella.yaml
           IMAGE_URL1=${ECR_REGISTRY}/${REPO}:${COMMIT_SHA}
-          export NODE_OPTIONS="--max_old_space_size=9000"
           docker build --pull  -t ${IMAGE_URL1} .
           docker push ${IMAGE_URL1}
       - name: deploy app
@@ -51,6 +56,11 @@ jobs:
           # echo 'EOF' >> $GITHUB_ENV
           HELM_OPTS="${HELM_OPTS} --set image.repository=${{ steps.login-ecr.outputs.registry }}/${{ env.app }}"
           HELM_OPTS="${HELM_OPTS} --set image.tag=${{ steps.get-commit-sha.outputs.commit_sha }}"
-          helm template ${{ env.app }} -f values.yaml charts -n testnet-layer3 ${HELM_OPTS} 
-          helm upgrade --install ${{ env.app }} -f values.yaml charts -n testnet-layer3 ${HELM_OPTS}
+          if [ ${{github.event.inputs.environment }} == "testnet" ]; then
+            helm template ${{ env.app }} -f values.yaml charts -n testnet-layer3 ${HELM_OPTS} 
+            helm upgrade --install ${{ env.app }} -f values.yaml charts -n testnet-layer3 ${HELM_OPTS}
+          else
+            helm template ${{ env.app }} -f values.yaml charts -n mainnet ${HELM_OPTS} 
+            helm upgrade --install ${{ env.app }} -f values.yaml charts -n mainnet ${HELM_OPTS}
+          fi
             
