--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -54,6 +54,27 @@ spec:
           {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        - name: {{ .Release.Name }}-exporter
+          command:
+          - selaginella
+          - exporter
+          envFrom:
+          - configMapRef:
+              name: selaginella-config
+          - secretRef:
+              name: selaginella-secret
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            {{- range $index, $val := .Values.ports }}
+            - name: {{ $val.name }}
+              containerPort: {{ $val.portNumber }}
+              protocol: TCP
+            {{- end }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
       initContainers:
         - name: {{ .Release.Name }}-migrate
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
