--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -13,8 +13,9 @@ rpcs:
     eth_address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE'
     weth_address: '0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14'
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
-    usdc_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x4200000000000000000000000000000000000006'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
@@ -24,6 +25,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://polygonzkevm-testnet.g.alchemy.com/v2/dmeCZ-Yf1YjIrgExOXbfrTF_Z_51GyBx'
     chain_id: 1442
@@ -33,6 +35,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://opt-sepolia.g.alchemy.com/v2/FzuTJBqbf8-w1E6AAcPkWO1a2OGFX2DL'
     chain_id: 11155420
@@ -42,6 +45,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
     chain_id: 84532
@@ -51,6 +55,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
     chain_id: 421614
@@ -60,6 +65,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://testnet-rpc.zkfair.io'
     chain_id: 43851
@@ -69,6 +75,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
   - rpc_url: 'https://testrpc.x1.tech/'
     chain_id: 195
@@ -78,7 +85,7 @@ rpcs:
     usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
-
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
 
 database:
   db_host: "postgresql"
