--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -16,6 +16,7 @@ rpcs:
     usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x4200000000000000000000000000000000000006'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
@@ -26,6 +27,7 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://polygonzkevm-testnet.g.alchemy.com/v2/dmeCZ-Yf1YjIrgExOXbfrTF_Z_51GyBx'
     chain_id: 1442
@@ -36,6 +38,7 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://opt-sepolia.g.alchemy.com/v2/FzuTJBqbf8-w1E6AAcPkWO1a2OGFX2DL'
     chain_id: 11155420
@@ -46,6 +49,7 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
     chain_id: 84532
@@ -56,6 +60,7 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
     chain_id: 421614
@@ -66,6 +71,7 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://testnet-rpc.zkfair.io'
     chain_id: 43851
@@ -76,6 +82,7 @@ rpcs:
     usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
   - rpc_url: 'https://testrpc.x1.tech/'
     chain_id: 195
@@ -86,12 +93,35 @@ rpcs:
     usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+
+  - rpc_url: 'https://rpc-moon.sepolia.mantle.xyz/v1/OTEyYjhkZmJlZGFjOGFkMGUxZDNmMDYz'
+    chain_id: 5003
+    founding_pool_address: '0xdb196C84731d46a06e5209fb97313431b214349B'
+    eth_address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE'
+    weth_address: '0xdEAddEaDdeadDEadDEADDEAddEADDEAddead1111'
+    usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
+    usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
+    dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+
+  - rpc_url: 'https://pacific-rpc.sepolia-testnet.manta.network/http'
+    chain_id: 3441006
+    founding_pool_address: '0xdb196C84731d46a06e5209fb97313431b214349B'
+    eth_address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE'
+    weth_address: '0xbec7859bc3d0603bec454f7194173e36bf2aa5c8'
+    usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
+    usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
+    dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
 
 database:
-  db_host: "postgresql"
+  db_host: "127.0.0.1"
   db_port: 5432
   db_user: "postgres"
-  db_password: "vVb9NhLYui"
+  db_password: ""
   db_name: "selaginella"
 
 exporter:
