--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -19,6 +19,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
@@ -32,6 +33,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://polygonzkevm-testnet.g.alchemy.com/v2/dmeCZ-Yf1YjIrgExOXbfrTF_Z_51GyBx'
     chain_id: 1442
@@ -45,6 +47,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://opt-sepolia.g.alchemy.com/v2/FzuTJBqbf8-w1E6AAcPkWO1a2OGFX2DL'
     chain_id: 11155420
@@ -55,9 +58,10 @@ rpcs:
     usdc_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
-    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
-    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
-    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    da_strategy_address: '0x1A2cbbcd58B235C58bD90fD05F5C30BCc1abDbAA'
+    gaming_strategy_address: '0x7cc3Bde56E1EAb98e4229e90C412a2DfDc54bb83'
+    social_strategy_address: '0x3C1eA28E80A6885f16bcBb26CbC4063656E174df'
+    strategy_manager: '0x5E32F34a5A9bafaeA2252501D2e59499B47E6e0c'
 
   - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
     chain_id: 84532
@@ -71,6 +75,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
     chain_id: 421614
@@ -84,6 +89,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://testnet-rpc.zkfair.io'
     chain_id: 43851
@@ -97,6 +103,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
   - rpc_url: 'https://testrpc.x1.tech/'
     chain_id: 195
@@ -110,6 +117,7 @@ rpcs:
     da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
     gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
     social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
 
 database:
   db_host: "postgresql"
@@ -121,3 +129,11 @@ database:
 exporter:
   exporter_address: "0.0.0.0:8081"
 
+l1_staking_manager_addr: "0x70144Fd68E82E4286646b9740182551a453cc25b"
+
+chain_id:
+  l1_chain_id: 11155111
+  zkfair_chain_id: 43851
+  x1_chain_id: 195
+  mantle_chain_id: 5003
+  op_chain_id: 11155420
