--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -17,6 +17,11 @@ rpcs:
     dai_address: '0x4200000000000000000000000000000000000006'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
@@ -28,6 +33,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://polygonzkevm-testnet.g.alchemy.com/v2/dmeCZ-Yf1YjIrgExOXbfrTF_Z_51GyBx'
     chain_id: 1442
@@ -39,6 +49,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://opt-sepolia.g.alchemy.com/v2/FzuTJBqbf8-w1E6AAcPkWO1a2OGFX2DL'
     chain_id: 11155420
@@ -50,6 +65,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x1A2cbbcd58B235C58bD90fD05F5C30BCc1abDbAA'
+    gaming_strategy_address: '0x7cc3Bde56E1EAb98e4229e90C412a2DfDc54bb83'
+    social_strategy_address: '0x3C1eA28E80A6885f16bcBb26CbC4063656E174df'
+    strategy_manager: '0x5E32F34a5A9bafaeA2252501D2e59499B47E6e0c'
+
 
   - rpc_url: 'https://base-sepolia.g.alchemy.com/v2/XBMhzm0JcYtvq35NAbDOxEVI3NzqgAb3'
     chain_id: 84532
@@ -61,6 +81,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://arb-sepolia.g.alchemy.com/v2/NBY1oJ2p9rGIqN2uvX_2gpc0eSkGWw1l'
     chain_id: 421614
@@ -72,6 +97,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://testnet-rpc.zkfair.io'
     chain_id: 43851
@@ -83,6 +113,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://testrpc.x1.tech/'
     chain_id: 195
@@ -94,6 +129,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+    
 
   - rpc_url: 'https://rpc-moon.sepolia.mantle.xyz/v1/OTEyYjhkZmJlZGFjOGFkMGUxZDNmMDYz'
     chain_id: 5003
@@ -105,6 +145,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
   - rpc_url: 'https://pacific-rpc.sepolia-testnet.manta.network/http'
     chain_id: 3441006
@@ -116,6 +161,11 @@ rpcs:
     dai_address: '0x6B175474E89094C44Da98b954EedeAC495271d0F'
     okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
     mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: '0x326339e3130e49e90504921809531877711cE0A4'
+    gaming_strategy_address: '0xf89ffe7f71255EdE4885d37ce229469901e05796'
+    social_strategy_address: '0xD8510678DC8D49CEf4688Ba8e66e31fb4b607c2B'
+    strategy_manager: ''
+
 
 database:
   db_host: "postgresql"
@@ -127,3 +177,11 @@ database:
 exporter:
   exporter_address: "0.0.0.0:8081"
 
+l1_staking_manager_addr: "0x70144Fd68E82E4286646b9740182551a453cc25b"
+
+chain_id:
+  l1_chain_id: 11155111
+  zkfair_chain_id: 43851
+  x1_chain_id: 195
+  mantle_chain_id: 5003
+  op_chain_id: 11155420
