--- a/selaginella.yaml
+++ b/selaginella.yaml
@@ -22,6 +22,20 @@ rpcs:
     social_strategy_address: ''
     strategy_manager: ''
 
+  - rpc_url: 'https://eth-sepolia.g.alchemy.com/v2/13PoJNZA67XxE87RJ8ZFyGkWKRGcOOgY'
+    chain_id: 11155111
+    founding_pool_address: '0x4F34C922fB0D80c7d79Ac25e497d90d7efa513C2'
+    eth_address: '0xEeeeeEeeeEeEeeEeEeEeeEEEeeeeEeeeeeeeEEeE'
+    weth_address: '0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14'
+    usdt_address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48'
+    usdc_address: '0x02859DC18CaA9C4c61A421D299D53cB1F121DC86'
+    dai_address: '0x4200000000000000000000000000000000000006'
+    okb_address: '0x3F4B6664338F23d2397c953f2AB4Ce8031663f80'
+    mnt_address: '0x65e37B558F64E2Be5768DB46DF22F93d85741A9E'
+    da_strategy_address: ''
+    gaming_strategy_address: ''
+    social_strategy_address: ''
+    strategy_manager: ''
 
   - rpc_url: 'https://scroll-sepolia.blockpi.network/v1/rpc/public'
     chain_id: 534351
@@ -179,7 +193,8 @@ exporter:
 l1_staking_manager_addr: "0xA127E9fd9Af136C8dC03A78e343fBF41164A8e73"
 
 chain_id:
-  l1_chain_id: 17000
+  l1_chain_sepolia_id: 11155111
+  l1_chain_holesky_id: 17000
   zkfair_chain_id: 43851
   x1_chain_id: 195
   mantle_chain_id: 5003
